Add regularization to backprop

--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -327,14 +327,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add regularization term to back propagation. For each, you have to add the regularization term's gradient ($\\frac{d}{dW} ( \\frac{1}{2}\\frac{\\lambda}{m}  W^2) = \\frac{\\lambda}{m} W$)."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 245,
+   "execution_count": 526,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def linear_backward(dZ, cache):\n",
+    "def linear_backward(dZ, cache, regularization_lambda=0):\n",
     "    \"\"\"\n",
     "    Implement the linear portion of backward propagation for a single layer\n",
     "\n",
@@ -349,27 +356,63 @@
     "    \"\"\"\n",
     "    A_prev, W, b = cache\n",
     "    m = A_prev.shape[1]\n",
-    "\n",
-    "    dW = 1/m * np.dot(dZ, A_prev.T)\n",
-    "    db = 1/m * np.sum(dZ, axis=1, keepdims=True)\n",
+    "    \n",
+    "    regularization_term = 1.0 * regularization_lambda / m * W\n",
+    "    dW = 1.0/m * np.dot(dZ, A_prev.T) + regularization_term\n",
+    "    db = 1.0/m * np.sum(dZ, axis=1, keepdims=True)\n",
     "    dA_prev = np.dot(W.T, dZ)\n",
     "    \n",
     "    assert (dA_prev.shape == A_prev.shape)\n",
     "    assert (dW.shape == W.shape)\n",
     "    assert (db.shape == b.shape)\n",
-    "    \n",
+    "\n",
     "    return dA_prev, dW, db"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 246,
+   "execution_count": 528,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'db1': array([[-2.77251981]]), 'dW1': array([[-18.7308861 ,  -0.45116839]]), 'dA1': array([[-0.00806972, -0.09111041],\n",
+      "       [-0.0019694 , -0.02223526]])}\n",
+      "expected:\n",
+      "dW1: [[-18.73079667,  -0.45114657]]\n",
+      "db1: [[-2.77251981]]\n",
+      "dA1: [[-0.00806972 -0.09111041][-0.0019694  -0.02223526]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test backward_propagation\n",
+    "Y = np.array([[1, 2]])\n",
+    "A_last = np.array([[ 0.52005806,  0.53126017]])\n",
+    "caches = [((np.array([[ 4.,  7.], [ 2.,  0.]]), np.array([[ 0.01788628,  0.0043651 ]]), np.array([[ 0.]])),\n",
+    "          np.array([[ 0.08027534,  0.12520399]]))]\n",
+    "\n",
+    "grads =  backward_propagation(A_last, Y, caches, regularization_lambda=0.0)\n",
+    "\n",
+    "print(grads)\n",
+    "\n",
+    "print(\"expected:\")\n",
+    "print(\"dW1: [[-18.73079667,  -0.45114657]]\")\n",
+    "print(\"db1: [[-2.77251981]]\")\n",
+    "print(\"dA1: [[-0.00806972 -0.09111041][-0.0019694  -0.02223526]]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 520,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def linear_activation_backward(dA, cache, activation):\n",
+    "def linear_activation_backward(dA, cache, activation, regularization_lambda=0.01):\n",
     "    \"\"\"\n",
     "    Implement the backward propagation for the LINEAR->ACTIVATION layer.\n",
     "    \n",
@@ -394,20 +437,20 @@
     "        raise Error(\"Activation function \" + activation + \" is not supported.\")      \n",
     "    \n",
     "    # linear step\n",
-    "    dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
+    "    dA_prev, dW, db = linear_backward(dZ, linear_cache, regularization_lambda=regularization_lambda)\n",
     "\n",
     "    return dA_prev, dW, db"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 521,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def backward_propagation(A_last, Y, caches):\n",
+    "def backward_propagation(A_last, Y, caches, regularization_lambda=0.01):\n",
     "    \"\"\"\n",
     "    Compute gradients for the [LINEAR->RELU] * (L-1) -> LINEAR -> SIGMOID group\n",
     "    \n",
@@ -431,12 +474,12 @@
     "    \n",
     "    current_cache = caches[L-1]\n",
     "    grads[\"dA\" + str(L)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = \\\n",
-    "        linear_activation_backward(dAL, current_cache, \"sigmoid\")\n",
+    "        linear_activation_backward(dAL, current_cache, \"sigmoid\", regularization_lambda=regularization_lambda)\n",
     "    \n",
     "    for l in reversed(range(L-1)):\n",
     "        current_cache = caches[l]\n",
     "        grads[\"dA\" + str(l + 1)], grads[\"dW\" + str(l + 1)], grads[\"db\" + str(l + 1)] = \\\n",
-    "            linear_activation_backward(grads[\"dA\" + str(L)], current_cache, \"relu\")\n",
+    "            linear_activation_backward(grads[\"dA\" + str(L)], current_cache, \"relu\", regularization_lambda=regularization_lambda)\n",
     "\n",
     "    return grads"
    ]
@@ -450,11 +493,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 501,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_L2_regularization_cost(parameters, lambd):\n",
+    "def get_L2_regularization_cost(parameters, Y, lambd):\n",
     "    \"\"\"\n",
     "    Return L2 regularization term.\n",
     "    \n",
@@ -471,9 +514,9 @@
     "    sum_of_squares = 0\n",
     "    for l in range(L):\n",
     "        sum_of_squares += np.sum(np.square(parameters[\"W\"+str(l+1)]))\n",
-    "    \n",
-    "    L2_regularization_cost = 1/m * lambd/2 * sum_of_squares\n",
-    "    \n",
+    "\n",
+    "    L2_regularization_cost = 1.0/m * lambd/2 * sum_of_squares\n",
+    "\n",
     "    return L2_regularization_cost"
    ]
   },
@@ -486,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 310,
+   "execution_count": 502,
    "metadata": {
     "collapsed": true
    },
@@ -513,36 +556,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 503,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "def compute_cost_with_regularization(A_last, Y, parameters, lambd=0.01):\n",
-    "    return compute_cost(A_last, Y) + get_L2_regularization_cost(parameters, lambd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 314,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Test L2 regularizartion\n",
-    "\n",
-    "A_last = np.array([[ 0.40682402,  0.01629284,  0.16722898,  0.10118111,  0.40682402]])\n",
-    "Y = np.array([[1, 1, 0, 1, 0]])\n",
-    "parameters = {'W1': np.array([[ 1.62434536, -0.61175641, -0.52817175],\n",
-    "       [-1.07296862,  0.86540763, -2.3015387 ]]), 'b1': np.array([[ 1.74481176],\n",
-    "       [-0.7612069 ]]), 'W2': np.array([[ 0.3190391 , -0.24937038],\n",
-    "       [ 1.46210794, -2.06014071],\n",
-    "       [-0.3224172 , -0.38405435]]), 'b2': np.array([[ 1.13376944],\n",
-    "       [-1.09989127],\n",
-    "       [-0.17242821]]), 'W3': np.array([[-0.87785842,  0.04221375,  0.58281521]]), 'b3': np.array([[-1.10061918]])}\n",
-    "\n",
-    "cost = compute_cost_with_regularization(A_last, Y, parameters, lambd = 0.1)\n",
-    "assert(cost - (1.60250160476) < 10e-8)"
+    "    return compute_cost(A_last, Y) + get_L2_regularization_cost(parameters, Y, lambd)"
    ]
   },
   {
@@ -554,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 504,
    "metadata": {
     "collapsed": true
    },
@@ -582,7 +603,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 505,
    "metadata": {
     "collapsed": true
    },
@@ -610,7 +631,7 @@
     "    for i in range(0, num_iterations):\n",
     "        A_last, caches = forward_propagation(X, parameters)\n",
     "        cost = compute_cost_with_regularization(A_last, Y, parameters)\n",
-    "        grads = backward_propagation(A_last, Y, caches)\n",
+    "        grads = backward_propagation(A_last, Y, caches, regularization_lambda=0.01)\n",
     "        parameters = update_parameters(parameters, grads, learning_rate)\n",
     "                \n",
     "        # Print cost\n",
@@ -630,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 506,
    "metadata": {
     "collapsed": true
    },
@@ -650,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": 507,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -665,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": 508,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 509,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -695,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": 510,
    "metadata": {
     "scrolled": false
    },
@@ -715,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 511,
    "metadata": {},
    "outputs": [
     {
@@ -735,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": 512,
    "metadata": {},
    "outputs": [
     {
@@ -780,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": 513,
    "metadata": {},
    "outputs": [
     {
@@ -788,8 +809,8 @@
      "output_type": "stream",
      "text": [
       "caches\n",
-      "[((array([[ 4.,  7.],\n",
-      "       [ 2.,  0.]]), array([[ 0.01788628,  0.0043651 ]]), array([[ 0.]])), array([[ 0.08027534,  0.12520399]]))]\n",
+      "((array([[ 4.,  7.],\n",
+      "       [ 2.,  0.]]), array([[ 0.01788628,  0.0043651 ]]), array([[ 0.]])), array([[ 0.08027534,  0.12520399]]))\n",
       "A_last = [[ 0.52005806  0.53126017]]\n",
       "Length of caches list = 1\n",
       "expected A_last: [[ 0.52005806  0.53126017]]\n",
@@ -812,51 +833,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 440,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'db1': array([[-0.]]), 'dW1': array([[-0., -0.]]), 'dA1': array([[-0.00806972, -0.09111041],\n",
-      "       [-0.0019694 , -0.02223526]])}\n",
-      "expected:\n",
-      "dW1: [[-0. -0.]]\n",
-      "db1: [[-0.]]\n",
-      "dA1: [[-0.00806972 -0.09111041][-0.0019694  -0.02223526]]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Test backward_propagation\n",
-    "Y = np.array([[1, 2]])\n",
-    "A_last = np.array([[ 0.52005806,  0.53126017]])\n",
-    "caches = [((np.array([[ 4.,  7.], [ 2.,  0.]]), np.array([[ 0.01788628,  0.0043651 ]]), np.array([[ 0.]])),\n",
-    "          np.array([[ 0.08027534,  0.12520399]]))]\n",
+    "# Test compute_cost and compute cost with L2 regularization\n",
+    "A_last = np.array([[0.40682402, 0.01629284, 0.16722898, 0.10118111, 0.40682402]])\n",
+    "Y = np.array([[1, 1, 0, 1, 0]])\n",
+    "parameters = {'W1': np.array([[ 1.62434536, -0.61175641, -0.52817175],\n",
+    "       [-1.07296862,  0.86540763, -2.3015387 ]]), 'b1': np.array([[ 1.74481176],\n",
+    "       [-0.7612069 ]]), 'W2': np.array([[ 0.3190391 , -0.24937038],\n",
+    "       [ 1.46210794, -2.06014071],\n",
+    "       [-0.3224172 , -0.38405435]]), 'b2': np.array([[ 1.13376944],\n",
+    "       [-1.09989127],\n",
+    "       [-0.17242821]]), 'W3': np.array([[-0.87785842,  0.04221375,  0.58281521]]), 'b3': np.array([[-1.10061918]])}\n",
     "\n",
-    "grads =  backward_propagation(A_last, Y, caches)\n",
-    "\n",
-    "print(grads)\n",
-    "\n",
-    "print(\"expected:\")\n",
-    "print(\"dW1: [[-0. -0.]]\")\n",
-    "print(\"db1: [[-0.]]\")\n",
-    "print(\"dA1: [[-0.00806972 -0.09111041][-0.0019694  -0.02223526]]\")"
+    "assert(compute_cost(A_last, Y) - 1.60250160476 < 10e-5)\n",
+    "assert(compute_cost_with_regularization(A_last, Y, parameters, lambd = 0.1) - (1.78648594517) < 10e-8)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
-   "source": [
-    "# Test compute_cost\n",
-    "A_last = np.array([[0.40682402, 0.01629284, 0.16722898, 0.10118111, 0.40682402]])\n",
-    "Y = np.array([[1, 1, 0, 1, 0]])\n",
-    "\n",
-    "assert(compute_cost(A_last, Y) - 1.60250160476 < 10e-5)"
-   ]
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
