Clean and add a test

--- a/neural_networks/simple_nn_model.ipynb
+++ b/neural_networks/simple_nn_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 531,
    "metadata": {
     "collapsed": true
    },
@@ -15,11 +15,23 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Shapes of different matrices\n",
+    "Shapes cheatsheet:\n",
     "* Ai -- activations from a layer (layers_dims[i], num_examples)\n",
     "* Wi -- weight matrix of shape (layers_dims[i], layers_dims[i-1])\n",
     "* bi -- bias vector of shape (layers_dims[i], 1)\n",
     "* X -- input data, numpy array of shape (input size, number of examples)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 579,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## TODO: add dropout\n",
+    "## TODO: add minibatch GD"
    ]
   },
   {
@@ -31,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 580,
    "metadata": {
     "collapsed": true
    },
@@ -39,11 +51,13 @@
    "source": [
     "def initialize_parameters(layer_dims, init_type='random'):\n",
     "    \"\"\"\n",
-    "    Performs a given initialization for the weight matrices and zero initialization for biases.\n",
+    "    Performs a chosen initialization for the weight matrices and zero initialization for biases.\n",
+    "    \n",
     "    layer_dims -- list with the dimensions of each layer in our network\n",
     "    init_type: either 'random', 'he', 'xavier'\n",
+    "    \n",
     "    Returns:\n",
-    "    parameters -- dictionary with parameters\n",
+    "    parameters -- dictionary with W, b params\n",
     "    \"\"\"\n",
     "    np.random.seed(3)\n",
     "    parameters = {}\n",
@@ -70,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 581,
    "metadata": {
     "collapsed": true
    },
@@ -85,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 582,
    "metadata": {
     "collapsed": true
    },
@@ -100,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 583,
    "metadata": {
     "collapsed": true
    },
@@ -122,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 584,
    "metadata": {
     "collapsed": true
    },
@@ -137,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 585,
    "metadata": {
     "collapsed": true
    },
@@ -147,7 +161,6 @@
     "    \"\"\"\n",
     "    Creates a list of random minibatches from (X, Y)\n",
     "    \n",
-    "    Arguments:\n",
     "    X -- input data, shape (input size, number of examples)\n",
     "    Y -- ground thruth vector, shape (1, number of examples)\n",
     "    mini_batch_size -- size of the mini-batches, integer\n",
@@ -191,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 586,
    "metadata": {
     "collapsed": true
    },
@@ -205,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 272,
+   "execution_count": 587,
    "metadata": {
     "collapsed": true
    },
@@ -217,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 273,
+   "execution_count": 588,
    "metadata": {
     "collapsed": true
    },
@@ -231,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 274,
+   "execution_count": 589,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 590,
    "metadata": {
     "collapsed": true
    },
@@ -256,7 +269,6 @@
     "    \"\"\"\n",
     "    Implement the forward propagation with a linear step and an activation step, for one layer\n",
     "\n",
-    "    Arguments:\n",
     "    A_prev -- activations from previous layer (or input data)\n",
     "    W -- weights matrix\n",
     "    b -- bias vector\n",
@@ -264,8 +276,7 @@
     "\n",
     "    Returns:\n",
     "    A -- the output of the activation function (post-activation value)\n",
-    "    cache -- a python dictionary containing \"linear_cache\" and \"activation_cache\";\n",
-    "             stored for computing the backward pass efficiently\n",
+    "    cache -- stored for backward prop\n",
     "    \"\"\"\n",
     "    \n",
     "    # Linear step\n",
@@ -288,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 275,
+   "execution_count": 591,
    "metadata": {
     "collapsed": true
    },
@@ -298,12 +309,11 @@
     "    \"\"\"\n",
     "    Implement forward propagation for the relu (hidden layers) and sigmoid (output layer) computation\n",
     "    \n",
-    "    Arguments:\n",
     "    X -- data\n",
     "    parameters -- output of initialize_parameters()\n",
     "    \n",
     "    Returns:\n",
-    "    AL -- last post-activation value\n",
+    "    A_last -- last post-activation value\n",
     "    caches -- list of 2-tuples storing caches output of linear_activation_forward(): [(A_prev, W, b), Z]\n",
     "              first is linear_cache, which is a 3-tuple (A_prev, W, b)\n",
     "              second is activation_cache, which is a Z array (input for the activation function)\n",
@@ -335,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 526,
+   "execution_count": 592,
    "metadata": {
     "collapsed": true
    },
@@ -345,14 +355,14 @@
     "    \"\"\"\n",
     "    Implement the linear portion of backward propagation for a single layer\n",
     "\n",
-    "    Arguments:\n",
     "    dZ -- Gradient of the cost with respect to the linear output\n",
     "    cache -- tuple of values (A_prev, W, b) coming from the forward propagation in the current layer\n",
-    "\n",
+    "    regularization_lambda - L2 regularization factor\n",
+    "    \n",
     "    Returns:\n",
     "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
-    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
-    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    dW -- Gradient of the cost with respect to W, same shape as W\n",
+    "    db -- Gradient of the cost with respect to b, same shape as b\n",
     "    \"\"\"\n",
     "    A_prev, W, b = cache\n",
     "    m = A_prev.shape[1]\n",
@@ -371,42 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 528,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'db1': array([[-2.77251981]]), 'dW1': array([[-18.7308861 ,  -0.45116839]]), 'dA1': array([[-0.00806972, -0.09111041],\n",
-      "       [-0.0019694 , -0.02223526]])}\n",
-      "expected:\n",
-      "dW1: [[-18.73079667,  -0.45114657]]\n",
-      "db1: [[-2.77251981]]\n",
-      "dA1: [[-0.00806972 -0.09111041][-0.0019694  -0.02223526]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Test backward_propagation\n",
-    "Y = np.array([[1, 2]])\n",
-    "A_last = np.array([[ 0.52005806,  0.53126017]])\n",
-    "caches = [((np.array([[ 4.,  7.], [ 2.,  0.]]), np.array([[ 0.01788628,  0.0043651 ]]), np.array([[ 0.]])),\n",
-    "          np.array([[ 0.08027534,  0.12520399]]))]\n",
-    "\n",
-    "grads =  backward_propagation(A_last, Y, caches, regularization_lambda=0.0)\n",
-    "\n",
-    "print(grads)\n",
-    "\n",
-    "print(\"expected:\")\n",
-    "print(\"dW1: [[-18.73079667,  -0.45114657]]\")\n",
-    "print(\"db1: [[-2.77251981]]\")\n",
-    "print(\"dA1: [[-0.00806972 -0.09111041][-0.0019694  -0.02223526]]\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": 593,
    "metadata": {
     "collapsed": true
    },
@@ -416,15 +391,15 @@
     "    \"\"\"\n",
     "    Implement the backward propagation for the LINEAR->ACTIVATION layer.\n",
     "    \n",
-    "    Arguments:\n",
     "    dA -- post-activation gradient for current layer l \n",
     "    cache -- tuple of values (linear_cache, activation_cache) stored for computing backward propagation efficiently\n",
     "    activation -- the activation to be used in this layer, \"sigmoid\" or \"relu\"\n",
-    "    \n",
+    "    regularization_lambda - L2 regularization factor\n",
+    " \n",
     "    Returns:\n",
     "    dA_prev -- Gradient of the cost with respect to the activation (of the previous layer l-1), same shape as A_prev\n",
-    "    dW -- Gradient of the cost with respect to W (current layer l), same shape as W\n",
-    "    db -- Gradient of the cost with respect to b (current layer l), same shape as b\n",
+    "    dW -- Gradient of the cost with respect to W, same shape as W\n",
+    "    db -- Gradient of the cost with respect to b, same shape as b\n",
     "    \"\"\"\n",
     "    linear_cache, activation_cache = cache # ((A_prev, W, b), Z)\n",
     "    \n",
@@ -444,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 521,
+   "execution_count": 594,
    "metadata": {
     "collapsed": true
    },
@@ -454,7 +429,6 @@
     "    \"\"\"\n",
     "    Compute gradients for the [LINEAR->RELU] * (L-1) -> LINEAR -> SIGMOID group\n",
     "    \n",
-    "    Arguments:\n",
     "    A_last -- probability vector, output of the forward propagation\n",
     "    Y --  the ground truth vector \n",
     "    caches -- list of caches containing:\n",
@@ -493,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 595,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -501,8 +475,8 @@
     "    \"\"\"\n",
     "    Return L2 regularization term.\n",
     "    \n",
-    "    Arguments:\n",
     "    parameters -- python dictionary containing parameters of the model\n",
+    "    Y -- labels\n",
     "    lambd -- regularization hyperparameter, scalar\n",
     "\n",
     "    Returns:\n",
@@ -515,9 +489,19 @@
     "    for l in range(L):\n",
     "        sum_of_squares += np.sum(np.square(parameters[\"W\"+str(l+1)]))\n",
     "\n",
-    "    L2_regularization_cost = 1.0/m * lambd/2 * sum_of_squares\n",
-    "\n",
-    "    return L2_regularization_cost"
+    "    return 1.0/m * lambd/2 * sum_of_squares"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 596,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_dropout_distribution():\n",
+    "    pass"
    ]
   },
   {
@@ -529,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 597,
    "metadata": {
     "collapsed": true
    },
@@ -556,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 598,
    "metadata": {
     "collapsed": true
    },
@@ -575,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 599,
    "metadata": {
     "collapsed": true
    },
@@ -603,14 +587,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 600,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "def nn_model(X, Y, layers_dims, learning_rate=0.0075, num_iterations=1000, mini_batch_size=64,\n",
-    "             seed=0, print_cost=False):\n",
+    "def nn_model(X, Y, layers_dims, learning_rate=0.0075, num_iterations=1000, mini_batch_size=64, print_cost=False):\n",
     "    \"\"\"\n",
     "    Implements a neural network with relu activation function for the hidden layers and\n",
     "    a sigmoid actication function for the output layer.\n",
@@ -623,7 +606,6 @@
     "    num_iterations -- number of iterations of the optimization loop\n",
     "    print_cost -- if True, it prints the cost every 100 steps\n",
     "    \"\"\"\n",
-    "    np.random.seed(1)\n",
     "    costs = []\n",
     "\n",
     "    parameters = initialize_parameters(layers_dims, init_type='random')\n",
@@ -651,7 +633,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 506,
+   "execution_count": 601,
    "metadata": {
     "collapsed": true
    },
@@ -671,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 507,
+   "execution_count": 602,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +668,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 508,
+   "execution_count": 603,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +683,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 509,
+   "execution_count": 604,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -716,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 510,
+   "execution_count": 605,
    "metadata": {
     "scrolled": false
    },
@@ -736,7 +718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 606,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 512,
+   "execution_count": 607,
    "metadata": {},
    "outputs": [
     {
@@ -801,16 +783,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 608,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "caches\n",
-      "((array([[ 4.,  7.],\n",
-      "       [ 2.,  0.]]), array([[ 0.01788628,  0.0043651 ]]), array([[ 0.]])), array([[ 0.08027534,  0.12520399]]))\n",
       "A_last = [[ 0.52005806  0.53126017]]\n",
       "Length of caches list = 1\n",
       "expected A_last: [[ 0.52005806  0.53126017]]\n",
@@ -833,7 +812,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 440,
+   "execution_count": 610,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'db1': array([[-2.77251981]]), 'dW1': array([[-18.73079667,  -0.45114657]]), 'dA1': array([[-0.00806972, -0.09111041],\n",
+      "       [-0.0019694 , -0.02223526]])}\n",
+      "expected:\n",
+      "dW1: [[-18.73079667,  -0.45114657]]\n",
+      "db1: [[-2.77251981]]\n",
+      "dA1: [[-0.00806972 -0.09111041][-0.0019694  -0.02223526]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Test backward_propagation\n",
+    "Y = np.array([[1, 2]])\n",
+    "A_last = np.array([[ 0.52005806,  0.53126017]])\n",
+    "caches = [((np.array([[ 4.,  7.], [ 2.,  0.]]), np.array([[ 0.01788628,  0.0043651 ]]), np.array([[ 0.]])),\n",
+    "          np.array([[ 0.08027534,  0.12520399]]))]\n",
+    "\n",
+    "grads =  backward_propagation(A_last, Y, caches, regularization_lambda=0.01)\n",
+    "\n",
+    "print(grads)\n",
+    "\n",
+    "print(\"expected:\")\n",
+    "print(\"dW1: [[-18.73079667,  -0.45114657]]\")\n",
+    "print(\"db1: [[-2.77251981]]\")\n",
+    "print(\"dA1: [[-0.00806972 -0.09111041][-0.0019694  -0.02223526]]\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 611,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -851,15 +865,6 @@
     "assert(compute_cost(A_last, Y) - 1.60250160476 < 10e-5)\n",
     "assert(compute_cost_with_regularization(A_last, Y, parameters, lambd = 0.1) - (1.78648594517) < 10e-8)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
