Add TensorBoard instructions

--- a/tensorflow/recurrent_neural_nets.ipynb
+++ b/tensorflow/recurrent_neural_nets.ipynb
@@ -400,6 +400,55 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Visualisation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the following command, with a path to the logs dir, to run TensorBoard - an interactive web-based model visualisation tool to look into the learning process:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ tensorboard --logdir=logs/RNN_with_summaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to assign a name to individual log dirs:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ tensorboard --logdir=rnn_demo:logs/RNN_with_summaries"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to use multiple dirs:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$ tensorboard --logdir=rnn_demo_1:logs_1, rnn_demo_2:logs_2"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
