Organize notebook versions

--- a/histopathologic-cancer-detection/old_versions/kaggle_binary_img_classification_pipeline_4.ipynb
+++ b/histopathologic-cancer-detection/old_versions/kaggle_binary_img_classification_pipeline_4.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "The data comes from a Kaggle playground competition [Histopathologic Cancer Detection](https://www.kaggle.com/c/histopathologic-cancer-detection), whose aim was to identify metastatic tissue in histopathologic scans of lymph node sections.\n",
     "\n",
-    "[1. Install dependencies and setup the environment](#1.-Install-dependencies-and-setup-environment)  \n",
+    "[1. Install dependencies and setup the environment](install)  \n",
     "[2. Download data from the project to the worker](#2.-Download-data-from-the-project-to-the-worker)  \n",
     "[3. Inspect and preprocess input data](#3.-Inspect-and-preprocess-input-data)  \n",
     "[4. Prepare input for training](#4.-Prepare-input-for-training)   \n",
@@ -18,6 +18,13 @@
     "[6. Train the model](#6.-Train-the-model)  \n",
     "[7. Test the model](#7.-Test-the-model)  \n",
     "[8. Upload results to the project](#8.-Upload-results-to-the-project)  \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='install'></a>"
    ]
   },
   {
@@ -93,8 +100,7 @@
    "source": [
     "BATCH_SIZE = 256\n",
     "\n",
-    "# For first runs we only use a subset of the data. Set it to 1\n",
-    "# once the model and hyperparameter tuning is largely done\n",
+    "# For first runs we only use a subset of the data\n",
     "SUBSET_SIZE = 0.01\n",
     "\n",
     "# Define how to split the training data into a train-val-test set\n",
@@ -905,13 +911,6 @@
     "        else:\n",
     "            print(\"Child {} was NOT frozen\".format(child_counter))\n",
     "        child_counter += 1\n",
-    "        \n",
-    "print()\n",
-    "\n",
-    "print(\"Parameters to learn:\")\n",
-    "for name, param in model_ft.named_parameters():\n",
-    "    if param.requires_grad == True:\n",
-    "        print(\"\\t\", name)\n",
     "\n",
     "model_ft = nn.DataParallel(model_ft)\n",
     "model_ft.cuda()"
@@ -1307,8 +1306,6 @@
     "    # Load a new model and apply the trained weights\n",
     "    trained_model = MODEL_FOR_PREDS\n",
     "    trained_model.fc = nn.Linear(trained_model.fc.in_features, num_classes)\n",
-    "    if model_name == 'inception':\n",
-    "        trained_model.AuxLogits = models.inception.InceptionAux(768, num_classes)\n",
     "    trained_model.cuda()\n",
     "    trained_model = nn.DataParallel(trained_model)\n",
     "    trained_model.load_state_dict(torch.load(CHECKPOINT_PATH)['model_state_dict'])\n",
